# WPTool

./: .gitignore  README.md  main.cpp  prog
cmake/: CMakeLists.txt
examples/: replase.cpp  reverce.cpp  string_content_test.cpp
src/: WPTool.cpp  WPTool.h  main.cpp  prog  string_content.cpp  string_content.h  word processing.cpp  word processing.h
src/old/: sentence.cpp  sentence.h  vocabulary.cpp  vocabulary.h  word processing.cpp  word processing.h
test/: main.cpp  string_content.cpp  string_content.h  word processing.cpp
